dgm-lib v2.1.0
 * `dgm::Buffer` has been revamped even further
	* Renamed to `dgm::StaticBuffer`
	* Capacity is now part of the template and it cannot be resized
	* Methods were renamed to make sense and not to blindly follow `std`
		* `grow` instead of `expand`
		* `getSize`, `getCapacity`, `getLast`, `isEmpty`, `isFull` instead of `size`, `capacity`, `last`, `empty` and `full`
 * Added class `dgm::DynamicBuffer`
	* Has constant time insertion and deletion and stable iterators
	* Doesn't have upper cap on the item count
 * Added class `dgm::SpatialBuffer`
	* Can perform fast lookups for items based on their position (something like QuadTree, but simpler)
	* Has somewhat constant time insertion and deletion
		* Spatially huge items will take longer than tiny ones
 * `dgm::ps::ParticleSystemInterface` now requires template parameter for particle count
	* This is because it internally uses `dgm::Buffer`
	* `init` method was removed and logic moved to constructor
	* `createParticle` is no longer virtual, instead it wraps call to virtual `createParticleImpl`
 * `dgm::ps::ParticleSystemRenderer` now requires template parameter for particle count
	* `init` method was removed and logic moved to constructor
 * Traits
	* Renamed `IsSmartPtr` to `SmartPtrType`
	* Renamed `IsSfVector` to `SfmlVectorType`
	* Added concept for `TrivialType`, used by container types

dgm-lib v2.0.0
 * Major changes:
	 * SFML 2.6.0 is now used
	 * C++23 is required
		* [Deducing this](https://devblogs.microsoft.com/cppblog/cpp23-deducing-this/) is used by `dgm::Buffer`
		* `std::stacktrace` is used by `dgm::GeneralException`
	 * CMakeLists.txt has been revamped:
		* Dependencies are managed with CMake Package Manager
		* Can be used as a subproject of another project which correctly handles linkage of all dependencies
	 * Error handling has been revamped:
		* `dgm::GeneralException` renamed to `dgm::Exception`
		* Stacktrace is appended to error message in `dgm::Exception`