@@ -25,5 +25,33 @@ TEST_CASE("[SpatialBuffer]")
                 ++value;
             }
         }
+
+        SECTION("Simple lookup manipulation works")
+        {
+            auto&& dummies = dgm::SpatialBuffer<Dummy>({ 0, 0, 10.f, 10.f }, 5);
+            auto&& box = dgm::Circle { 1.f, 1.f, 1.f };
+            dummies.insert(Dummy { 1 }, box);
+
+            {
+                auto&& candidateIds = dummies.getOverlapCandidates(box);
+                REQUIRE(candidateIds.size() == 1u);
+                REQUIRE(candidateIds.front() == 0u);
+            }
+
+            dummies.removeFromLookup(0, box);
+
+            {
+                auto&& candidateIds = dummies.getOverlapCandidates(box);
+                REQUIRE(candidateIds.size() == 0u);
+            }
+
+            dummies.returnToLookup(0, box);
+
+            {
+                auto&& candidateIds = dummies.getOverlapCandidates(box);
+                REQUIRE(candidateIds.size() == 1u);
+                REQUIRE(candidateIds.front() == 0u);
+            }
+        }
     }
 }
