@@ -4,10 +4,14 @@ dgm-lib v2.1.0
 	* Capacity is now part of the template and it cannot be resized
 	* Methods were renamed to make sense and not to blindly follow `std`
 		* `grow` instead of `expand`
+		* `growUnchecked` that grows the container and always result of `getLast`
+			* If the buffer is full, it always returns last element
 		* `getSize`, `getCapacity`, `getLast`, `isEmpty`, `isFull` instead of `size`, `capacity`, `last`, `empty` and `full`
+	* Added trait called `StaticBufferType`
  * Added class `dgm::DynamicBuffer`
 	* Has constant time insertion and deletion and stable iterators
 	* Doesn't have upper cap on the item count
+	* Used by `dgm::SpatialBuffer`, for custom use case prefer using `plf::colony`
  * Added class `dgm::SpatialBuffer`
 	* Can perform fast lookups for items based on their position (something like QuadTree, but simpler)
 	* Has somewhat constant time insertion and deletion
@@ -21,7 +25,7 @@ dgm-lib v2.1.0
  * Traits
 	* Renamed `IsSmartPtr` to `SmartPtrType`
 	* Renamed `IsSfVector` to `SfmlVectorType`
-	* Added concept for `TrivialType`, used by container types
+	* Added concept for `TrivialType`, used by `dgm::StaticBuffer` type
 
 dgm-lib v2.0.0
  * Major changes:
